<resources>
    <string name="app_name">Shoe Store Project-Kotlin</string>
    <string name="app_title">Shoe Store</string>
    <!-- Strings related to login -->
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="welcome_message">Thank you for visiting our shoe store. We hope you find that
        perfect purchase you\'ve been looking for. Happy shopping!</string>
    <string name="continue_button">Continue</string>
    <string name="instructions">Instructions</string>
    <string name="instruction_message">Instructions on how to use the shoe store [TODO]</string>
    <string name="log_out">Log Out</string>
    <string name="add_new_shoe">Add New Shoe</string>
    <string name="new_shoe_hint">Style name, shoe size (double), brand/company, description</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="list_item_format">%1$s - %2$s%n  Size %3$.1f</string>
    <string name="dummy_data">Dummy Data</string>
    <string name="company">Company</string>
    <string name="shoe_name">Shoe name</string>
    <string name="size">Size</string>
    <string name="description">Description</string>
    <string name="list_of_shoe_images">List of shoe images</string>
    <string name="hint_list_of_shoe_images">image 1, image 2, image 3…</string>
    <string name="hint_dummy_company">Dummy Company</string>
    <string name="hint_shoe_name">Razer High Top</string>
    <string name="hint_size">8.5</string>
    <string name="hint_description">Black and red high top trainer</string>
</resources>